--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="h-full">
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -18,8 +18,8 @@
 	</head>
 	<body 
 		data-sveltekit-preload-data="hover" 
-		class="h-full bg-gradient-to-br from-desert-50 via-sunset-50 to-canyon-50 font-sans antialiased"
+		class="min-h-full bg-gradient-to-br from-desert-50 via-sunset-50 to-canyon-50 font-sans antialiased"
 	>
-		<div class="h-full">%sveltekit.body%</div>
+		<div class="min-h-full">%sveltekit.body%</div>
 	</body>
 </html>
